gcc/testsuite/algol68/compile/error-string-break-4.a68
begin puts ("hello '(u) world") # { dg-error "four" }  #
end
